network/netpol-allow-developer-pod2.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: netpol-allow-developer-pod2
  namespace: infrastructure
spec:
  podSelector:
    matchLabels:
      app: mysql
  policyTypes:
  - Ingress
  ingress:
  - from:
    - ipBlock:
        cidr: 10.0.0.247/1
    ports:
    - protocol: TCP
      port: 3306
